--- a/cgit.css
+++ b/cgit.css
@@ -24,43 +24,68 @@ table {
       border-collapse: collapse;
 }
 
-table#header {
+h1, h2 {
+	font-style: normal;
+	font-weight: normal;
+	margin: 1pt 0 0 0;
+}
+
+#header {
 	width: 100%;
 	margin-bottom: 1em;
 }
 
-table#header td.logo {
+#header .logo {
 	width: 96px;
+	float: left;
 }
 
-table#header td.main {
-	font-size: 250%;
-	padding-left: 10px;
+#header .main {
 	white-space: nowrap;
 }
 
-table#header td.main a {
+#header .main h1 {
+	display: inline;
+	font-size: 25pt;
+	padding-left: 10px;
+}
+
+#header .main a {
 	color: #000;
 }
 
-table#header td.form {
-	text-align: right;
-	vertical-align: bottom;
-	padding-right: 1em;
-	padding-bottom: 2px;
-	white-space: nowrap;
-}
-
-table#header td.form form,
-table#header td.form input,
-table#header td.form select {
+#header form,
+#header input,
+#header select {
 	font-size: 90%;
+	vertical-align: text-bottom;
 }
 
-table#header td.sub {
+#header form {
+	position: absolute;
+	top: 10px;
+	right: 5px;
+}
+
+#header .sub {
 	color: #777;
 	border-top: solid 1px #ccc;
+	padding-top: 3px;
+}
+
+#header .sub h1 {
+	display: inline;
+	font-size: 10pt;
 	padding-left: 10px;
+}
+
+#header * {
+	clear: none;
+}
+
+#owner {
+	float: right;
+	padding-right: 5px;
 }
 
 table.tabs {
